More MKII, autogen recipes, config changes.